fixed height problems on smaller screens

--- a/Frontend/src/Dashboard.css
+++ b/Frontend/src/Dashboard.css
@@ -87,7 +87,6 @@ h1 {
 /* Tablet */
 @media (max-width: 768px) {
   .transactionCard {
-    height: 600px;
     width: 80%;
     text-align: center;
   }
